--- a/english_2023/styles.css
+++ b/english_2023/styles.css
@@ -19,18 +19,32 @@ section {
     margin: 0px;
 }
 .slide-container{
-    overflow: hidden;
-    height: 300px;
     padding: 10px;
     display: flex;
+    flex-wrap: wrap;
     background-color: var(--bg-color-less-dark);
 }
 .slide {
     width: 200px;
     height: 200px;
     margin: 10px;
+    /*display: inline-block;*/
     box-shadow: 0px 15px 10px black;
+    position: relative;
+}
+.slide-disbaled{
+    background-color: var(--bg-color-dark);
+}
+.slide-disbaled > .slide-banner {
+    background-image: linear-gradient(rgba(0, 0, 0, 0), var(--bg-color-dark));
+}
+.slide-enabled {
+    transition: all .2s;
+    transform:scale(1);
     background-color: var(--bg-color-light);
+}
+.slide-enabled:hover {
+    transform:scale(1.1);
 }
 .slide-banner {
     background-image: linear-gradient(rgba(0, 0, 0, 0), var(--accent-color-tertiary));
@@ -49,7 +63,7 @@ section {
     height: 300px;
 }
 #title {
-    font-size: 72px;
+    font-size: 10vmin;
     z-index: 10;
     text-shadow: 0 0 10px var(--bg-color-dark);
 }
